# proactive-care-route-optimizer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  Senior-Care PRD - Proactive Care-Route Optimizer.docx  netlify.toml  pyproject.toml  render.yaml  storyboarding-exercise.txt
.githooks/: commit-msg
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  manage.py  pyproject.toml
backend/src/api/: alerts.py  geocoding.py  models.py  permissions.py  route_alerts.py  serializers.py  urls.py  utils.py  views.py
backend/src/api/management/commands/: compute_risk_scores.py  ingest_dfta.py  ingest_elevator_devices.py  ingest_forecast.py  ingest_outages.py  ingest_weather.py  purge_old_routes.py
backend/src/api/migrations/: 0001_initial.py  0002_risk_scoring.py  0003_single_elevator.py  0004_elevator_count_override.py  0005_provider_borough_address.py  0006_weather_forecast.py  0007_data_minimization.py  0008_route_stop_details.py  0008_routestop_borough_routestop_floor_and_more.py
backend/src/core/: asgi.py  settings.py  urls.py  wsgi.py
backend/tests/: conftest.py  factories.py  helpers.py  test_alerts.py  test_alerts_at_risk.py  test_dashboard.py  test_health.py  test_ingest.py  test_ingest_elevator_devices.py  test_outages.py  test_purge_routes.py  test_risk_scores.py  test_route_stops.py  test_routes.py
deck/: build.py  presentation.pptx  pyproject.toml  storyboard.md
docs/: deferred-frontend-api-gaps.md  landing-audio-script.md  nyc-open-data.md
frontend/: .env.example  .prettierignore  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: landing-page-beat0.m4a  landing-page-beat1.m4a  landing-page-beat2.m4a  landing-page-beat3.m4a  landing-page-beat4.m4a  landing-page-beat5.m4a  landing-page-beat6.m4a
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  (+3 more)
(+36 files in other folders)
